--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <picture>
          <source srcset="big.jpeg" media="(min-width: 401px)" />
         <source srcset="small.jpg" />
-       
-        <image src="big.jpeg" alt="Tree on the land">
+       <image src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg" alt="Tree on the land"></image>
+        <image src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="Tree on the land">
       </picture>
     </main>
   </body>
