--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <main>
       <picture>
-         <source srcset="big.jpeg" media="(min-width: 401px)" />
+        <source srcset="big.jpeg" media="(min-width: 401px)" />
         <source srcset="small.jpg" />
-       
-        <image src="big.jpeg" alt="Tree on the land">
+
+        <img src="big.jpeg" alt="Tree on the land" />
       </picture>
     </main>
   </body>
